<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical"
    tools:context=".main.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutTitle"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/manager"/>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ivAvatar"
                    android:text="Name: Thân Văn Thái"
                    android:textColor="@color/black"
                    android:paddingStart="20dp"
                    android:textStyle="bold"
                    android:paddingEnd="0dp"/>

                <TextView
                    android:id="@+id/tvRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ivAvatar"
                    android:layout_below="@id/tvName"
                    android:textColor="@color/black"
                    android:paddingStart="20dp"
                    android:layout_marginTop="3dp"
                    android:paddingEnd="0dp"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:paddingBottom="5dp"
                android:paddingEnd="15sp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:text="@string/image_notifi"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/layoutImageSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_photo" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/image_setting"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#ccc"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutNotificationSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutTitle"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notifications" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/notification_seting"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#ccc"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:paddingBottom="5dp"
                android:paddingEnd="15sp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:text="@string/account"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/layoutAccountSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/account_setting"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#ccc"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutTitle"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/web" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/change_password"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#ccc"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:paddingBottom="5dp"
                android:paddingEnd="15sp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:text="@string/help"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/layoutHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/info" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/help"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#ccc"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFAQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutTitle"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/question" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/faq"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#ccc"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="#f75353"
                android:padding="15dp"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>