<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChangePasswordActivity">

    <RelativeLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_color">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Đổi mật khẩu"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutTitle"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="0dp"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/white"
                android:paddingStart="15dp"
                android:text="@string/old_password"
                android:gravity="center_vertical"
                android:textColor="#000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtOldPassword"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:background="@color/white"
                android:gravity="end|center_vertical"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="**********"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/white"
                android:paddingStart="15dp"
                android:text="@string/new_password"
                android:gravity="center_vertical"
                android:textColor="#000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtNewPassword"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:background="@color/white"
                android:gravity="end|center_vertical"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="**********"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/white"
                android:paddingStart="15dp"
                android:text="@string/confirm_password"
                android:gravity="center_vertical"
                android:textColor="#000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:background="@color/white"
                android:gravity="end|center_vertical"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="**********"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="50dp"
            android:background="@color/main_color"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </LinearLayout>

</RelativeLayout>