<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical"
    tools:context=".ui.AccountSettingsActivity">

    <RelativeLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_color">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/account_setting"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutTitle"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Email:"
                android:textColor="#000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="5"
                android:background="@color/white"
                android:gravity="end|center_vertical"
                android:text="thaitv210@gmail.com"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/phone_number"
                android:textColor="#000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="5"
                android:background="@color/white"
                android:gravity="end|center_vertical"
                android:text="0375371802"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/main_color"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"/>

</RelativeLayout>